# Tcl-FFTW

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
src/: CMakeLists.txt  TclFFTW.c  pkgIndex.tcl  tclfftw.c
